--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 
 <head>
-  <title> Kids Are Weird </title>
+  <title> Say Hi to Emma </title>
 </head>
 <body>
   <div id="image">
   </div>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script> $("#image").append('<img id="theImg" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />'); </script>
 </body>
